# dj-rara

./: .cache-test  .env.example  .gitignore  README.md  app.py  debug_data.py  diagnose.py  history.py  main.py  pyproject.toml  recommendation_engine.py  requirements.txt  spotify_auth.py  spotify_client.py  test_auth.py
.github/workflows/: publish.yml  test.yml
.superpowers/brainstorm/14900-1775243219/state/: server-stopped
.superpowers/brainstorm/95748-1775200106/content/: architecture.html  features.html  interaction-model.html  screen-layouts.html  vibe.html
.superpowers/brainstorm/95748-1775200106/state/: server-stopped
dj_rara/: __main__.py  app.py  history.py  main.py  models.py  spotify_auth.py  spotify_client.py  themes.py
dj_rara/screens/: mood.py  playlists.py  recommendations.py  setup.py  stats.py
docs/superpowers/plans/: 2026-04-03-dj-rara-tui-rewrite.md
docs/superpowers/specs/: 2026-04-03-dj-rara-cli-design.md  2026-04-04-cicd-pypi-publish-design.md
screens/: mood.py  playlists.py  recommendations.py  stats.py
tests/: conftest.py  test_history.py  test_models.py  test_spotify_client.py  test_stats.py
